--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-scripts",
+  "name": "lab-react-scripts",
   "version": "1.1.0",
-  "description": "Configuration and scripts for Create React App.",
+  "description": "Configuration and scripts for Create React App. A customized version for Lab that includes sass and babel-0",
   "repository": "facebook/create-react-app",
   "license": "MIT",
   "engines": {
     "node": ">=6"
   },
   "bugs": {
-    "url": "https://github.com/facebook/create-react-app/issues"
+    "url": "https://github.com/LabCo/create-react-app/issues"
   },
   "files": [
     "bin",
