--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lab-react-scripts",
-  "version": "1.1.0",
+  "version": "2.0.0-next.1",
   "description": "Configuration and scripts for Create React App. A customized version for Lab that includes sass and babel-0",
   "repository": "facebook/create-react-app",
   "license": "MIT",
@@ -22,21 +22,22 @@
   },
   "dependencies": {
     "@babel/core": "7.0.0-beta.44",
+    "@babel/preset-stage-0": "7.0.0-beta.44",
     "@babel/runtime": "7.0.0-beta.44",
     "autoprefixer": "7.2.5",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "8.2.2",
+    "babel-eslint": "8.2.1",
     "babel-jest": "22.1.0",
     "babel-loader": "8.0.0-beta.0",
-    "babel-plugin-named-asset-import": "^0.1.0",
-    "babel-preset-react-app": "^3.1.1",
+    "babel-plugin-named-asset-import": "1.0.0-next.66cc7a90",
+    "babel-preset-react-app": "4.0.0-next.66cc7a90",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "2.3.0",
     "css-loader": "0.28.9",
     "dotenv": "5.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.15.0",
-    "eslint-config-react-app": "^2.1.0",
+    "eslint-config-react-app": "3.0.0-next.66cc7a90",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.41.0",
     "eslint-plugin-import": "2.8.0",
@@ -56,7 +57,7 @@
     "postcss-loader": "2.0.10",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react-dev-utils": "^5.0.0",
+    "react-dev-utils": "6.0.0-next.66cc7a90",
     "resolve": "1.6.0",
     "sass-loader": "7.0.0",
     "style-loader": "0.19.1",
