--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lab-react-scripts",
-  "version": "2.0.0-next.1",
+  "version": "2.0.0-next.2",
   "description": "Configuration and scripts for Create React App. A customized version for Lab that includes sass and babel-0",
   "repository": "facebook/create-react-app",
   "license": "MIT",
@@ -52,6 +52,7 @@
     "identity-obj-proxy": "3.0.0",
     "jest": "22.1.2",
     "loader-utils": "^1.1.0",
+    "node-sass": "^4.8.3",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.10",
